# squid

./: #README.org#  .gitignore  README.org  used_apis
pkg/squid/: archives  runtime
run/: squid.run  squid_ahci.run  squid_ahci.run~
src/: CMakeLists.txt  Makefile
src/app/squid/: .#benchmark.cc  benchmark.cc  main.c  main.cc  main.c~  main_libc.cc  old_main.cc  old_squid.c  squid.c  squid.cc  squid.c~  squid.h  target.mk  test_squid.h
src/app/squid/include/: benchmark.h  squid.h  squidlib.h
